force-app/main/default/objects/Stretch__c/fields/CLV5__c.field-meta.xml
<CustomField>
    <fullName>CLV5__c</fullName>
    <label>CLV5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>