force-app/main/default/objects/Stretch__c/fields/DiscountKG__c.field-meta.xml
<CustomField>
    <fullName>DiscountKG__c</fullName>
    <label>Dto. Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>