force-app/main/default/objects/Stretch__c/fields/DiscountL__c.field-meta.xml
<CustomField>
    <fullName>DiscountL__c</fullName>
    <label>Dto. L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>