force-app/main/default/objects/Stretch__c/fields/FromConsumptionKG__c.field-meta.xml
<CustomField>
    <fullName>FromConsumptionKG__c</fullName>
    <label>Consumo desde Kg</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>