force-app/main/default/objects/Stretch__c/fields/FromPercentage__c.field-meta.xml
<CustomField>
    <fullName>FromPercentage__c</fullName>
    <label>Porcentaje desde</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>