force-app/main/default/objects/Stretch__c/fields/PriceTodayKG__c.field-meta.xml
<CustomField>
    <fullName>PriceTodayKG__c</fullName>
    <label>Precio HOY Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>