force-app/main/default/objects/Stretch__c/fields/PriceTodayL__c.field-meta.xml
<CustomField>
    <fullName>PriceTodayL__c</fullName>
    <label>Precio HOY L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>