force-app/main/default/objects/Stretch__c/fields/PrimaServiciosA__c.field-meta.xml
<CustomField>
    <fullName>PrimaServiciosA__c</fullName>
    <label>Primaservicios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>